apps/rtmp/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rtmp-hls
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:881490135253:certificate/15fce3b8-43ed-4555-8d9a-837375603b2e
    alb.ingress.kubernetes.io/success-codes: "200-499"
    alb.ingress.kubernetes.io/group.name: team9-backend-dev
    alb.ingress.kubernetes.io/group.order: "40"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: backend.team9.cloud.skala-ai.com
spec:
  ingressClassName: alb
  rules:
    - host: backend.team9.cloud.skala-ai.com
      http:
        paths:
          - path: /hls
            pathType: Prefix
            backend:
              service:
                name: rtmp
                port:
                  number: 80
          - path: /live
            pathType: Prefix
            backend:
              service:
                name: rtmp
                port:
                  number: 80
  tls: []
